--- a/app/views/info_pages/siteInfo.html.erb
+++ b/app/views/info_pages/siteInfo.html.erb
@@ -1,10 +1,21 @@
-<h1>SiteInfo</h1>
+<div class="pageTitle">
+  <h2>SiteInfo</h2>
+</div>
 <%= link_to about_url do %>
-  <div class="modalClick">About</div>
+  <div class="siteBox modalClick">
+    <h3>About</h3>
+    <p>yada yada</p>
+  </div>
 <% end %>
 <%= link_to help_url do %>
-  <div class="modalClick">Help</div>
+  <div class="siteBox modalClick">
+    <h3>Help</h3>
+    <p>yada yada</p>
+  </div>
 <% end %>
 <%= link_to siteRules_url do %>
-  <div class="modalClick">Site Rules & Regulations</div>
+  <div class="siteBox modalClick">
+    <h3>Site Rules</h3>
+    <p>yada yada</p>
+  </div>
 <% end %>
