--- a/app/views/layouts/_navMenu.html.erb
+++ b/app/views/layouts/_navMenu.html.erb
@@ -1,17 +1,17 @@
 <div id="navMenu" class="container-fluid">
   <%= link_to root_url do %>
-    <div class="navMenuButton modalClick" id="homeButton">Return Home</div>
+    <div class="navMenuButton modalClick" id="homeButton"><h1 class="menuText">Return Home</h1></div>
   <% end %>
   <%= link_to index_url do %>
-    <div class="navMenuButton modalClick">User Index</div>
+    <div class="navMenuButton modalClick"><h1 class="menuText">User Index</h1></div>
   <% end %>
   <%= link_to top_url do %>
-    <div class="navMenuButton modalClick">Top Rated Pictures</div>
+    <div class="navMenuButton modalClick"><h1 class="menuText">Top Rated Pictures</h1></div>
   <% end %>
   <%= link_to random_url do %>
-    <div class="navMenuButton modalClick">Go to Random Picture</div>
+    <div class="navMenuButton modalClick"><h1 class="menuText">Go to Random Picture</h1></div>
   <% end %>
   <%= link_to siteInfo_url do %>
-    <div class="navMenuButton modalClick">Additional Site Information</div>
+    <div class="navMenuButton modalClick"><h1 class="menuText">Additional Site Information</h1></div>
   <% end %>
 </div>
