--- a/app/views/users/_user_info_section.html.erb
+++ b/app/views/users/_user_info_section.html.erb
@@ -1,34 +1,39 @@
 <div class="userInfoBox">
   <div class="userInfoBlock">
     <div class="userInfoBlockSection">
-      <% if @user.profile_picture? %>
-        <div class="viewFullSize userIndex" id="yesProfile" style="background-image:url(<%= @user.profile_picture.url(:thumb) %>); background-size:cover;">
+          <% if @user.profile_picture? %>
+            <div class="indexPic viewFullSize">
+              <img src="<%= @user.profile_picture.url(:thumb) %>">
+            </div>
+          <% else %>
+            <div class="indexPic">
+              No profile picture
+            </div>
+          <% end %>
+        <div class="userInfo">
+          <div class="infoTitle">
+            <h3><%= @user.username %></h3>
+          </div>
+          <div class="infoDesc" style="height: 85%;">
+            <p><%= @user.description %></p>
+          </div>
         </div>
-      <% else %>
-        <div id="noProfile" class="userIndex">
-          No profile picture
-        </div>
-      <% end %>
-    </div>
-    <div class="userInfoBlockSection">
-      <h3><%= @user.username %></h3>
-      <p><%= @user.description %></p>
     </div>
     <%= render 'follow_form' if logged_in? %>
   </div>
   <div class="userInfoBlock">
     <%= link_to following_user_path(@user) do %>
-      <div class="userInfoButton"><%= @user.following.count %> following</div>
+      <div class="userInfoButton modalClick"><h3><%= @user.following.count %> following</h3></div>
     <% end %>
     <%= link_to followers_user_path(@user) do %>
-      <div class="userInfoButton"><%= @user.followers.count %> followers</div>
+      <div class="userInfoButton modalClick"><h3><%= @user.followers.count %> followers</h3></div>
     <% end %>
     <% if logged_in? && current_user?(@user) %>
       <%= link_to edit_user_url(current_user) do %>
-        <div class="userInfoButton">Edit User</div>
+        <div class="userInfoButton modalClick"><h3>Edit User</h3></div>
       <% end %>
       <%= link_to logout_url, method: "delete" do %>
-        <div class="userInfoButton">Logout</div>
+        <div class="userInfoButton"><h3>Logout</h3></div>
       <% end %>
     <% end %>
   </div>
