--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,9 @@
 <% provide(:title, 'User Index') %>
 <div class="pageTitle">
-  All Users
+  <h2>All Users</h2>
 </div>
 
 <div class="contentBox">
   <%= render @users %>
 </div>
-<div class="paginationSite">
-  <%= link_to path_to_prev_page(@users) do %>
-    <div class="modalClick pageButton">
-      Prev
-    </div>
-  <% end %>
-  <%= link_to path_to_next_page(@users) do %>
-    <div class="modalClick pageButton">
-      Next
-    </div>
-  <% end %>
-</div>
+<%= render 'shared/pagination', items: @users %>
