--- a/app/views/info_pages/siteRules.html.erb
+++ b/app/views/info_pages/siteRules.html.erb
@@ -1,2 +1,3 @@
-<h1>InfoPages#siteRules</h1>
-<p>Find me in app/views/info_pages/siteRules.html.erb</p>
+<div class="pageTitle">
+  <h2>Site Rules</h2>
+</div>
