--- a/app/views/layouts/_navBar.html.erb
+++ b/app/views/layouts/_navBar.html.erb
@@ -8,7 +8,7 @@
     <% end %>
   <% else %>
     <%= link_to login_url do %>
-      <div class="navButton modalClick"><h1>Login</h1></div>
+      <div class="navButton modalClick" id="navLogin"><h1>Login</h1></div>
     <% end %>
   <% end %>
   <div id="hoverOption"class="navButton optionsButton">
